[package]
name = "lsmxzy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
ouroboros = "0.18"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.11"
rustyline = "13.0.0"
clap = { version = "4.4.17", features = ["derive"] }
rand = "0.8.5"
nom = "7.1.3"

[dev-dependencies]
tempfile = "3"
